# simple-resturant

./: .gitignore  Makefile  README.md  README.org  docker-compose.yml
.github/workflows/: release.yml  validate.yml
modules/: Cargo.toml  Dockerfile  Makefile.toml  compose.yml  release.yml
modules/client/: Cargo.toml
modules/client/src/: main.rs  schema.rs
modules/server/: Cargo.toml
modules/server/migrations/2024-11-14-084051_create_orders/: up.sql
modules/server/migrations/2024-11-14-084055_create_items/: up.sql
modules/server/migrations/2024-11-18-071647_create_customer/: down.sql  up.sql
modules/server/migrations/2024-11-18-074055_create_items/: up.sql
modules/server/migrations/2024-11-18-084055_create_orders/: up.sql
modules/server/src/: lib.rs  main.rs  schema.rs
modules/server/src/adapters/: factories.rs  mod.rs  routes.rs  state.rs
modules/server/src/adapters/dto/: request.rs  response.rs
modules/server/src/application/: config.rs  features.rs  interfaces.rs  log.rs  mod.rs  repo.rs
modules/server/src/domain/: mod.rs  server.rs
modules/server/src/domain/entities/: customer.rs  item.rs  mod.rs  order.rs  table.rs
modules/server/src/infrastructure/: db.rs  mod.rs  server.rs
