[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
inquire = "0.7.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/index.html
unsafe_code = "forbid"
non_ascii_idents = "forbid"

unused = { level = "deny", priority = -1 }
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_extern_crates = "deny"
unused_macros = "deny"
unused_imports = "deny"
deprecated_in_future = "deny"
missing_docs = "deny"

absolute_paths_not_starting_with_crate = "warn"
unnameable_test_items = "warn"
unit-bindings = "warn"
unreachable-pub = "warn"

[lints.clippy]
enum_glob_use = "deny"
unused_async = "deny"
vec_init_then_push = "allow"

[dev-dependencies]
cargo-make = "0.37.23"

[package.metadata.cargo-udeps.ignore]
development = ["cargo-make"]

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
