[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "ws"] }
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres"] }
diesel_migrations = "2.2.0"
env_logger = "0.11.5"
fastrace = "0.7.4"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/index.html
unsafe_code = "forbid"
non_ascii_idents = "forbid"

unused = { level = "deny", priority = -1 }
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_extern_crates = "deny"
unused_macros = "deny"
unused_imports = "deny"
deprecated_in_future = "deny"
missing_docs = "deny"

absolute_paths_not_starting_with_crate = "warn"
unnameable_test_items = "warn"
unit-bindings = "warn"
unreachable-pub = "warn"

[lints.clippy]
enum_glob_use = "deny"
unused_async = "deny"
vec_init_then_push = "allow"

[dev-dependencies]
axum-test = "16.4.0"
cargo-make = "0.37.23"

[package.metadata.cargo-udeps.ignore]
development = ["cargo-make"]

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
